--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Content"
-            android:exported="false" />
+            android:exported="false"
         android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".Book_listview"
